apps/metatube/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube
spec:
  hostnames:
    - metatube.i.shikanime.studio
  parentRefs:
    - name: metatube
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metatube-redirect
spec:
  hostnames:
    - metatube.i.shikanime.studio
  parentRefs:
    - name: metatube
      sectionName: http
